derive-ex-tests/tests/compile_fail/compare_op/partial_ord_key_not_impl_partial_ord.rs
use derive_ex::derive_ex;

#[derive(PartialEq)]
struct NotPartialOrd;

#[derive_ex(PartialOrd, PartialEq)]
struct X {
    #[partial_ord(key = NotPartialOrd)]
    x: u8,
}

fn main() {}
